@@ -1,11 +1,22 @@
 language: python
 sudo: false
-env:
-    - TOXENV=py27
-    - TOXENV=py33
+python:
+  - 2.7
+  - 3.4
+  - 3.5
+  - 3.6
+  - pypy-5.6.0
+  - pypy3.3-5.5-alpha
 install:
-    - travis_retry pip install tox
+  - pip install -U pip setuptools zope.testrunner
+  - pip install -U coveralls coverage
+  - pip install -U -e ".[test]"
 script:
-    - tox
+  - coverage run -m zope.testrunner --test-path=src --auto-color
+after_success:
+  - coveralls
 notifications:
-    email: false
+  email: false
+cache: pip
+before_cache:
+  - rm -f $HOME/.cache/pip/log/debug.log
