@@ -2,20 +2,34 @@
 envlist =
     flake8,
     py27,
-    py33,
+    py34,
+    py35,
+    py36,
+    pypy,
+    pypy3,
+    coverage
 
 [testenv]
 commands =
-    python setup.py test -q
+    coverage run -m zope.testrunner --test-path=src {posargs:-vc}
+setenv =
+  COVERAGE_FILE=.coverage.{envname}
 deps =
-    ZODB
-    transaction
-    zope.component
-    zope.interface
-    zope.processlifetime
-    zope.site
-    zope.testing
+    coverage
+    .[test]
     zope.testrunner
+
+[testenv:coverage]
+deps = coverage
+setenv =
+  COVERAGE_FILE=.coverage
+skip_install = true
+commands =
+    coverage erase
+    coverage combine
+    coverage report
+    coverage html
+    coverage xml
 
 [testenv:flake8]
 basepython = python2.7
