@@ -5,7 +5,9 @@ CHANGES
 4.0.0a2 (unreleased)
 --------------------
 
-- Dropped support for Python 2.6.
+- Dropped support for Python 2.6 and 3.3.
+
+- Added support for Python 3.4, 3.5, 3.6, PyPy2 and PyPy3.
 
 
 4.0.0a1 (2013-02-25)
